[workspace]
resolver = "2"
members = [
    "air",
    "blake3",
    "brakedown",
    "challenger",
    "code",
    "commit",
    "field",
    "fri",
    "goldilocks",
    "keccak",
    "lde",
    "ldt",
    "matrix",
    "merkle-tree",
    "maybe-rayon",
    "mersenne-31",
    "multi-stark",
    "poseidon",
    "reed-solomon",
    "rescue",
    "symmetric",
    "tensor-pcs",
    "util",
    "uni-stark",
]
