[package]
name = "p3-blake3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-symmetric = { path = "../symmetric" }
# # https://github.com/succinctlabs/BLAKE3/pull/1
# blake3 = { git = "https://github.com/succinctlabs/BLAKE3.git", rev = "a27b887cbfa7591b3f99922e5c7c1712a9c33f2b" }
# https://github.com/succinctlabs/BLAKE3/pull/2
# blake3 = { git = "https://github.com/succinctlabs/BLAKE3.git", rev = "1f5a9f02a4e6d4359e38d8b49a58d7cdfadf0ab9" }
# uncomment what shouldn't have been commented out
blake3 = { git = "https://github.com/succinctlabs/BLAKE3.git", rev = "471bf5a1c1efbe1ff3e866f82d2e08751ec4d294" }


[features]
neon = ["blake3/neon"]
parallel = ["blake3/rayon"]
