[package]
name = "p3-blake3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-symmetric = { path = "../symmetric" }
blake3 = { git = "https://github.com/succinctlabs/BLAKE3.git", branch="hide/compress-inner-patch-off-1-5-0" }

[features]
neon = ["blake3/neon"]
parallel = ["blake3/rayon"]
