[package]
name = "p3-mersenne-31"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.12.0"
p3-dft = { path = "../dft" }
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
p3-maybe-rayon = { path = "../maybe-rayon" }
p3-util = { path = "../util" }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[features]
rand = ["dep:rand"]

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false

[dev-dependencies]
criterion = "0.5"
p3-field-testing = { path = "../field-testing" }
rand_chacha = "0.3.1"
rand = "0.8.5"
